fix: Fix z-indexes

--- a/client/src/components/CardModal/AttachmentAddZone/AttachmentAddZone.module.scss
+++ b/client/src/components/CardModal/AttachmentAddZone/AttachmentAddZone.module.scss
@@ -10,7 +10,7 @@
     position: absolute;
     text-align: center;
     width: 100%;
-    z-index: 2000;
+    z-index: 2001;
   }
 
   .wrapper {
