--- a/client/src/components/Fixed/Fixed.module.scss
+++ b/client/src/components/Fixed/Fixed.module.scss
@@ -2,5 +2,6 @@
   .wrapper {
     position: fixed;
     width: 100%;
+    z-index: 1;
   }
 }
