--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -7,7 +7,8 @@
       background: none;
     }
 
-    &:active, &:hover {
+    &:active,
+    &:hover {
       background: transparent;
       color: rgba(255, 255, 255, 0.9);
     }
@@ -42,7 +43,6 @@
     height: 50px;
     margin: 0;
     width: 100%;
-    z-index: 1;
   }
 
   .notification {
